# MoA

./: .env.example  .gitignore  LICENSE  README.md  advanced-moa.py  api.py  bot.py  bot2.py  eval_mt_bench.py  generate_cli_streaming.py  generate_for_alpaca_eval.py  generate_for_flask.py  generate_for_mt_bench.py  moa.py  old_bot.py  requirements.txt  run_eval.sh  run_eval_alpaca_eval.sh  run_eval_flask.sh  run_eval_mt_bench.sh  run_generation.sh  show_mt_bench_result.py  tests.py  utils.py
FLASK/: README.md  openai_concurrent.py
FLASK/evaluation_set/: flask_evaluation.jsonl  flask_hard_evaluation.jsonl
FLASK/gpt_review/: aggregate_difficulty_skill.py  aggregate_domain.py  aggregate_skill.py  gpt4_eval.py
FLASK/gpt_review/src/: prompt.jsonl  reviewer.jsonl
FLASK/input_data/: flask_evaluation_raw.jsonl
FLASK/metadata_annotation/domain/: domain_annotation.py
FLASK/model_output/: conversation.py  inference.py  load_model.py
FLASK/openai_info/: api_info.json
FastChat/: pyproject.toml
Mesop_Langgraph/: .gitignore  README.md  pyproject.toml
Mesop_Langgraph/src/mesop_langgraph/: graph.py  main.py
alpaca_eval/: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  pytest.ini  requirements.txt  setup.py
alpaca_eval/client_configs/: README.md
alpaca_eval/docs/: format_export_leaderboards.py  format_sample_sheets.py  index.html
alpaca_eval/scripts/: precompute.py
alpaca_eval/tests/: test_analyze.py  test_decoders_unit.py  test_main.py  test_pairwise_evaluator.py
outputs/: Qwen-72B-round-1.json  Qwen-72B-round-2.json
(+344 files in other folders)
